
set(SRCROOT ${PROJECT_SOURCE_DIR}/tools/GenomeVisualizer)

# all source files
set(GVisualizer_SRC ${SRCROOT}/GenomeVisualizer.cpp ${SRCROOT}/GRenderer.cpp ${SRCROOT}/GRenderer.hpp)

# define the GenomeVisualizer target
add_executable(GenomeVisualizer ${GVisualizer_SRC})

if(SFML_FOUND)
	target_include_directories(GenomeVisualizer PRIVATE ${SFML_INCLUDE_DIR})
	target_link_libraries(GenomeVisualizer PRIVATE ${SFML_LIBRARIES})
endif()

if(JsonBox_FOUND)
	target_include_directories( GenomeVisualizer PRIVATE ${JsonBox_INCLUDE_DIR})
	target_link_libraries(GenomeVisualizer PRIVATE ${JsonBox_LIBRARY})
endif()

target_link_libraries(GenomeVisualizer PRIVATE EvoAI)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    message(STATUS "GenomeVisualizer - Compiler gcc")
    target_compile_options(GenomeVisualizer PRIVATE -std=c++17 -Wall -Wextra -Wshadow)
    target_link_options(GenomeVisualizer PRIVATE -mwindows)
    if(EvoAI_BUILD_STATIC)
        target_link_options(GenomeVisualizer PRIVATE -static -static-libgcc -static-libstdc++)
    endif()
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(GenomeVisualizer PRIVATE -O3 -fexpensive-optimizations -DNDEBUG)
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(GenomeVisualizer PRIVATE -g)
    endif()
elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    message(STATUS "GenomeVisualizer - Compiler clang")
    target_compile_options(GenomeVisualizer PRIVATE -std=c++17 -Wall -Wextra -Wshadow)
    target_link_options(GenomeVisualizer PRIVATE -mwindows)
    if(EvoAI_BUILD_STATIC)
        target_link_options(GenomeVisualizer PRIVATE -static -static-libgcc -static-libstdc++)
    endif()
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(GenomeVisualizer PRIVATE -O3 -DNDEBUG)
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(GenomeVisualizer PRIVATE -g)
    endif()
elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    message(STATUS "GenomeVisualizer - Compiler MSVC")
    target_compile_options(GenomeVisualizer PRIVATE /std:c++17 /W4)
    set_target_properties(GenomeVisualizer PROPERTIES WIN32_EXECUTABLE TRUE)
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(GenomeVisualizer PRIVATE /O3 /DNDEBUG)
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(GenomeVisualizer PRIVATE /g)
    endif()
else()
    message(WARNING "GenomeVisualizer - Compiler not supported.")
endif()

include(GNUInstallDirs)
install(TARGETS GenomeVisualizer RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
