
set(SRCROOT ${PROJECT_SOURCE_DIR}/tools/ImageMixer)

# all source files
set(ImageMixer_SRC ${SRCROOT}/ImageMixer.cpp)

# define the ImageMixer target
add_executable(ImageMixer ${ImageMixer_SRC})

if(SFML_FOUND)
    target_include_directories(ImageMixer PRIVATE ${SFML_INCLUDE_DIR})
    target_link_libraries(ImageMixer PRIVATE ${SFML_LIBRARIES})
endif(SFML_FOUND)

target_link_libraries(ImageMixer PRIVATE EvoAI)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    message(STATUS "ImageMixer - Compiler gcc")
    target_compile_options(ImageMixer PRIVATE -std=c++17 -Wall -Wextra -Wshadow)
    if(EvoAI_BUILD_STATIC)
        target_link_options(ImageMixer PRIVATE -static -static-libgcc -static-libstdc++)
    endif()
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(ImageMixer PRIVATE -O3 -fexpensive-optimizations -DNDEBUG)
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(ImageMixer PRIVATE -g)
    endif()
elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    message(STATUS "ImageMixer - Compiler clang")
    target_compile_options(ImageMixer PRIVATE -std=c++17 -Wall -Wextra -Wshadow)
    if(EvoAI_BUILD_STATIC)
        if(NOT APPLE)
            target_link_options(ImageMixer PRIVATE -static -static-libgcc -static-libstdc++)
        endif()
    endif()
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(ImageMixer PRIVATE -O3 -DNDEBUG)
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(ImageMixer PRIVATE -g)
    endif()
elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    message(STATUS "ImageMixer - Compiler MSVC")
    target_compile_options(ImageMixer PRIVATE /std:c++17 /W4)
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(ImageMixer PRIVATE /O3 /DNDEBUG)
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(ImageMixer PRIVATE /g)
    endif()
else()
    message(WARNING "ImageMixer - Compiler not supported.")
endif()

include(GNUInstallDirs)
install(TARGETS ImageMixer RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})